# CMake_Template

./: CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt
App/Include/: app.h
App/Source/: app.c  main.c
Test/: CMakeLists.txt
Test/Source/: AppTest.cpp
docs/: Doxyfile.in  Doxyfile.out
